--- a/dne-paqx/pom.xml
+++ b/dne-paqx/pom.xml
@@ -232,6 +232,10 @@
             <artifactId>hibernate-jpa-2.1-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
         <!-- H2 DB -->
         <dependency>
