ESTS-137690 Use q3stable dependencies where possible
All com.dell.cpsd dependencies in the q3table branches should point to
q3stable versions where they are available. If there is no q3stable
version available it means that it is an old version that is no longer
being built by master or q3stable branches and will not change in the
future. If there is a q3stable version it is being built by a q3stable
branch and we must consume that.

--- a/dne-paqx-packaging/pom.xml
+++ b/dne-paqx-packaging/pom.xml
@@ -23,7 +23,7 @@
     </licenses>
     
     <properties>
-        <com.dell.cpsd.ess.version>1.0.0-SNAPSHOT</com.dell.cpsd.ess.version>
+        <com.dell.cpsd.ess.version>1.0.0-q3stable-SNAPSHOT</com.dell.cpsd.ess.version>
     </properties>
     
     <dependencies>
