--- a/dne-paqx/pom.xml
+++ b/dne-paqx/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.dell.cpsd</groupId>
             <artifactId>common-client</artifactId>
-            <version>2.2.0-SNAPSHOT</version>
+            <version>2.2.0-q3stable-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>com.dell.cpsd</groupId>
             <artifactId>discovered-nodes-capabilities-client-java</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.1.0-q3stable-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -86,7 +86,7 @@
             <artifactId>engineering-standards-service-api</artifactId>
             <classifier>schemas</classifier>
             <type>zip</type>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0-q3stable-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -145,7 +145,7 @@
         <dependency>
             <groupId>com.dell.cpsd.sdk</groupId>
             <artifactId>SDKClient-driver</artifactId>
-            <version>1.01-SNAPSHOT</version>
+            <version>1.01-q3stable-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <groupId>ch.qos.logback</groupId>
