[maint] Allow rpmbuild to work with Cygwin
Recent packaging changes related to TLS work lost changes that
allowed the DNE PAQX RPM to be built from Windows under
Cygwin. This change restores that ability. The following changes
were required:

- The `LOCAL_WORKSPACE` path variable for
  `dne-paqx-packaging/target` is calculated in `build_rpm.sh`
  rather than set in the maven pom. This is required in order to
  generate a Cygwin-compatible path.

- The `build_rpm.sh` execution is disabled by default (set to
  build phase none). It is enabled by a profile that is activated
  on unix or on Windows if `-Drpmbuild` is passed to the maven
  command-line.

The `-Drpmbuild` flag is required on Windows to execute the rpm
build because there are a number of requirements that must be met
in order for the rpm build tob be successful:

- Docker must be installed and working

- Cygwin must be installed with rpm packages

- Cygwin's /bin directory must be on the Windows PATH in order to
  build from a cmd or powershell terminal. This is not required
  if maven is executed from a Cygwin shell.

--- a/dne-paqx-packaging/pom.xml
+++ b/dne-paqx-packaging/pom.xml
@@ -44,68 +44,122 @@
                     <family>unix</family>
                 </os>
             </activation>
+            <properties>
+                <bashExe>bash</bashExe>
+            </properties>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <version>2.10</version>
-                        <executions>
-                            <execution>
-                                <id>copy-dependencies-for-distribution</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>copy-dependencies</goal>
-                                </goals>
-                                <configuration>
-                                    <outputDirectory>${project.build.directory}/dependency/lib</outputDirectory>
-                                    <overWriteIfNewer>true</overWriteIfNewer>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-
+                    <!--run rpm.sh to create RPM, based on parameters described in spec file-->
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>1.2.1</version>
                         <executions>
-                            <!--Convert tarred docker image and db scripts to RPM-->
                             <execution>
                                 <id>rpmbuild</id>
                                 <phase>package</phase>
-                                <goals>
-                                    <goal>exec</goal>
-                                </goals>
-                                <configuration>
-                                    <environmentVariables>
-                                        <DOCKER_IMAGE_NAME>${dockerImage.name}</DOCKER_IMAGE_NAME>
-                                        <LOCAL_WORKSPACE>${basedir}/target</LOCAL_WORKSPACE>
-                                    </environmentVariables>
-                                    <executable>${basedir}/build/build_rpm.sh</executable>
-                                    <workingDirectory>${basedir}</workingDirectory>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
-
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <!-- Profile for executing the build in Cygwin. Requires bash.exe on PATH and rpmbuild installed -->
+            <id>package-cygwin</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+                <property>
+                    <name>rpmbuild</name>
+                </property>
+            </activation>
+            <properties>
+                <bashExe>bash.exe</bashExe>
+            </properties>
+            <build>
+                <plugins>
+                    <!--run rpm.sh to create RPM, based on parameters described in spec file-->
                     <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>${jacoco-maven-plugin.version}</version>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven-surefire-plugin.version}</version>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>${maven-failsafe-plugin.version}</version>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.2.1</version>
+                        <executions>
+                            <execution>
+                                <id>rpmbuild</id>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
         </profile>
     </profiles>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies-for-distribution</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/dependency/lib</outputDirectory>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <!--Convert tarred docker image and db scripts to RPM-->
+                    <execution>
+                        <id>rpmbuild</id>
+                        <phase>none</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <environmentVariables>
+                                <DOCKER_IMAGE_NAME>${dockerImage.name}</DOCKER_IMAGE_NAME>
+                            </environmentVariables>
+                            <executable>${bashExe}</executable>
+                            <arguments>
+                                <argument>build/build_rpm.sh</argument>
+                            </arguments>
+                            <workingDirectory>${basedir}</workingDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-maven-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven-failsafe-plugin.version}</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
